--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://scenes/special_floors/special_floors.tres"
 exclude_filter=""
 export_path="export/windows/goobert.exe"
 patches=PackedStringArray()
@@ -75,7 +75,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://scenes/special_floors/special_floors.tres"
 exclude_filter=""
 export_path="export/linux/goobert.x86_64"
 patches=PackedStringArray()
@@ -91,7 +91,7 @@ script_export_mode=2
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 shader_baker/enabled=false
@@ -118,7 +118,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://scenes/special_floors/special_floors.tres"
 exclude_filter=""
 export_path="export/osx/goobert.dmg"
 patches=PackedStringArray()
@@ -373,9 +373,9 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="res://scenes/special_floors/special_floors.tres"
 exclude_filter=""
-export_path="export/web/index"
+export_path="export/web/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
